# fmgNICE-Video

./: .gitignore  CMakeLists.txt  README.md  build.bat  install.bat  uninstall.bat
cmake/windows/: obs-module.rc.in
data/locale/: de-DE.ini  en-US.ini  es-ES.ini
src/: aligned-memory.h  cpu-affinity.h  ffmpeg-decoder.c  ffmpeg-decoder.h  fmgnice-video-source.c  frame-cache.c  frame-cache.h  gpu-zero-copy.c  gpu-zero-copy.h  lockfree-ringbuffer.c  lockfree-ringbuffer.h  performance-monitor.h  plugin-main.c  simd-convert.c  simd-convert.h  simd-nv12-copy.h
